--- a/augSIR simulation journal/augSIR_simulations.tex
+++ b/augSIR simulation journal/augSIR_simulations.tex
@@ -86,5 +86,7 @@
 \begin{document}
 \maketitle
 \input{exper_7_25_2015}
+\input{7_30_2015_fixed_params}
+\input{7_30_2015_reparameterized_model}
 
 \end{document}
